--- a/encore/index.html
+++ b/encore/index.html
@@ -63,7 +63,7 @@
             var x;
             var currentTeam = 1;
             var currentWord;
-            var allwords = ["kathy", "is", "hot"];
+            var allwords = ["Tree","Mistletoe","Angel","Snow","Christmas","Snowman","Bell","Star","Santa"];
             var team1points = 0;
             var team2points = 0;
             var timerAmount = 3;
