--- a/encore/index.html
+++ b/encore/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href='https://fonts.googleapis.com/css?family=Mountains of Christmas' rel='stylesheet'>
         <style>
                 .myturn {
   border: 15px solid gray;
 }
             * {
-                font-family: Arial;
+                font-family: 'Mountains of Christmas';
             }
             p {
                 text-align: center;
