--- a/encore/index.html
+++ b/encore/index.html
@@ -12,7 +12,7 @@
             }
             p {
                 text-align: center;
-                margin-top: 0px;
+                margin: 10px;
             }
             .timer-display {
                 font-size: 200px;
