--- a/encore/index.html
+++ b/encore/index.html
@@ -68,7 +68,7 @@
             var x;
             var currentTeam = 1;
             var currentWord;
-            var allwords = ["Tree","Mistletoe","Angel","Snow","Christmas","Snowman","Bell","Star","Santa"];
+            var allwords = ["Tree","Mistletoe","Angel","Snow","Christmas","Snowman","Bell","Star","Santa","Baby"];
             var team1points = 0;
             var team2points = 0;
             var timerAmount = 3;
