--- a/encore/index.html
+++ b/encore/index.html
@@ -73,7 +73,7 @@
             var x;
             var currentTeam = 1;
             var currentWord;
-            var allwords = ["Tree","Angel","Snow","Christmas","Bell","Santa","Baby"];
+            var allwords = ["Tree","Snow","Christmas","Bell","Santa","Baby"];
             var team1points = 0;
             var team2points = 0;
             var timerAmount = 20;
